multiple images added

--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
 </head>
 <body>
     <div class="card" id="card">
-    <img src="dress.png" class="product-img"/>
+    <img src="candle.png" class="product-img"/>
     <h3 class="product-title">Kids Dress</h3>
     <p class="product-price">
-        Price:Rs.999
+        Price:Rs.99
     </p>
     <div class="quantity-container">
         <img src="minus.png" class="quantity-icon" onclick="dec()"/>
         <span id="quantity">1</span>
-        <img src="add.png" class="quantity-icon" onclick="inc()"/>
+        <img src="plus.png" class="quantity-icon" onclick="inc()"/>
     </div>
     <button onclick="" class="btn-buy-now">Buy Now</button>
 </div>
