styles changes added

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <style>
         .card{
             width:200px;
-            border:1px solid crimson;
+            border:1px solid cadetblue;
             background-color: whitesmoke;
             border-radius: 10px;
         }
         .product-img{
-            height: 150px;
+            height: 100px;
             display: block;
-            margin:0px auto;
+            margin:2px auto;
             
         }
         .product-title{
@@ -31,7 +31,7 @@
             text-align: center;
         }
     .btn-buy-now{
-        background-color: purple;
+        background-color: pink;
         color: aliceblue;
         border: none;
         padding: 5px 20px;
@@ -57,7 +57,7 @@
 <body>
     <div class="card" id="card">
     <img src="candle.png" class="product-img"/>
-    <h3 class="product-title">Kids Dress</h3>
+    <h3 class="product-title">Candle Lights</h3>
     <p class="product-price">
         Price:Rs.99
     </p>
